# pp

./: .clang-format  CMakeLists.txt  README.md
includes/cli/: parser.hpp
includes/compiler/: compiler.hpp
includes/debugger/: debugger.hpp  registers.hpp  thread_detacher.hpp
includes/disassembler/: disassembler.hpp  instruction.hpp
includes/memory_region/: memio.hpp  memory_region.hpp  permission.hpp
includes/process/: process.hpp
includes/process/memory_region/: memory_region.hpp
includes/process/thread/: thread.hpp
includes/process/util/: mem_manipulation.hpp
includes/util/: addr_to_region.hpp  debugger.hpp  demangle.hpp  info.hpp  is_elf.hpp  read_file.hpp  type_traits.hpp
src/: CMakeLists.txt
src/cli/: main.cpp  parser.cpp
src/compiler/: compile.cpp  compiler.cpp
src/debugger/: allocate_mem.cpp  change_region_permissions.cpp  debugger.cpp  func.cpp  hook_fn.cpp  load_lib.cpp  registers.cpp
src/disassembler/: disassembler.cpp  instruction.cpp
src/memory_region/: memory_region.cpp  permission.cpp
src/process/: CMakeLists.txt  function_hook.cpp  process.cpp
src/process/memory_region/: CMakeLists.txt  memory_region.cpp  permission.cpp
src/process/thread/: CMakeLists.txt  thread.cpp
src/thread/: thread.cpp
src/util/: read_file.cpp
test/: CMakeLists.txt  test.cpp
